Squashed commit of the following:
commit c4b5cfd2fe8f88e907814d49a67c239528efc563
Author: Daniel V <daniel.viddy@gmail.com>
Date:   Tue Jul 2 21:15:27 2024 -0400

    Add config versions to files, and test boostedyaml.

commit ad624ac04983ea59a168152e2dcf747ce0f28960
Author: Daniel V <daniel.viddy@gmail.com>
Date:   Tue Jul 2 19:43:54 2024 -0400

    Fix final errors for BoostedYaml support.

commit 086efc016833c4807a7cd1856cf8e63d8dc4fb9b
Author: Daniel V <daniel.viddy@gmail.com>
Date:   Tue Jul 2 01:04:45 2024 -0400

    Add boostedyaml to shade relocation, in preparation for next TNPC.

commit ae3fb4c97ea6e6e0d2810593254686f5a8ec0aac
Author: Daniel V <daniel.viddy@gmail.com>
Date:   Mon Jul 1 21:17:08 2024 -0400

    Start working on baltop menu.

commit ffa280304e3da622688e75cd10320d7876ff4b90
Author: Daniel V <daniel.viddy@gmail.com>
Date:   Sat Jun 29 02:07:07 2024 -0400

    Update license header.

commit 123ac1c99c456f092e74d319eea098870a04216e
Author: Daniel V <daniel.viddy@gmail.com>
Date:   Sat Jun 29 01:55:14 2024 -0400

    Update SQL statements to new queries for receipts.

commit 9124c6e18d9084463c48c00f747ad88455884c28
Author: Daniel V <daniel.viddy@gmail.com>
Date:   Sat Jun 29 01:43:00 2024 -0400

    Update SQL statements to new queries for receipts.

commit 192c437dfa491594c4da8bb1078e93bf9b1caf94
Author: Daniel V <daniel.viddy@gmail.com>
Date:   Sat Jun 29 01:32:44 2024 -0400

    Fix loading action source.

commit 6347905a4f1891cfdbc0280bcf05e9d7a38201b3
Author: Daniel V <daniel.viddy@gmail.com>
Date:   Sat Jun 29 00:37:22 2024 -0400

    Finish YAMLReceipt loading.

commit 6b6fbe6bcafe7d4c17fec005e0c90cbe5af531bd
Author: Daniel V <daniel.viddy@gmail.com>
Date:   Thu Jun 27 23:16:14 2024 -0400

    Finish YAML Receipt saving, start loading.

commit c9fcbffc188aefc40d78572a35fa3874b150c699
Author: Daniel V <daniel.viddy@gmail.com>
Date:   Thu Jun 27 22:25:08 2024 -0400

    Finish SQL receipt loading.

commit 5d93202e2cde3916b16c6760eb6c94ec2a5a